Issue IMCMS-504: Fixes in menu editor design - Align headers; - Clean up css;

--- a/src/main/webapp/imcms/css/grid/imcms-grid.css
+++ b/src/main/webapp/imcms/css/grid/imcms-grid.css
@@ -8,6 +8,7 @@
     clear: both;
 }
 
+.imcms-menu-editor-head__new-button--grid-col-2,
 .imcms-document-editor-head-tools__tool--grid-col-2,
 .imcms-document-editor-head-tools__tool--grid-col-3,
 .imcms-document-editor-head-tools__tool--grid-col-4,
@@ -70,6 +71,7 @@
     width: 8.33%;
 }
 
+.imcms-menu-editor-head__new-button--grid-col-2,
 .imcms-document-editor-head-tools__tool--grid-col-2,
 .imcms-document-list-titles__title--col-2,
 .imcms-document-item__info--col-2,
