--- a/src/main/webapp/imcms/css/menu_editor/imcms-menu_editor.css
+++ b/src/main/webapp/imcms/css/menu_editor/imcms-menu_editor.css
@@ -40,34 +40,29 @@
 }
 
 .imcms-menu-editor-body__left-side .imcms-menu-new-button__button {
-    margin-top: 27px;
-    margin-bottom: 10px;
+    margin: 27px 0 10px;
     padding: 13px 0;
-    width: 50%;
+    width: 100%;
 }
 
 .imcms-menu-editor-head__new-button {
-    margin-top: 17px;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    width: 50%;
-    padding: 13px 0;
+    margin-right: auto;
 }
 
 .imcms-menu-editor-head__type-sort-block {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    margin-left: 10%;
     width: 30%;
-    padding: 13px 0;
     min-width: fit-content;
 }
 
 .imcms-menu-editor-head {
     display: flex;
-    width: 100%;
+    padding: 0 37px 14px;
+    align-items: flex-end;
 }
 
+.imcms-menu-editor-head .imcms-field .imcms-select__label {
+    margin-bottom: 5px;
+}
 
 .imcms-menu-new-button__button {
     text-align: center;
